--- a/src/assets/scss/community/postList.scss
+++ b/src/assets/scss/community/postList.scss
@@ -11,6 +11,7 @@
     list-style: none;
     margin-bottom: 30px;
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
 
     .user{
       height: 50px;
@@ -63,6 +64,7 @@
       p{
         font-size: 16px;
         line-height: 23px;
+        cursor: pointer;
       }
     }
 
@@ -96,6 +98,7 @@
       .like,
       .collection,
       .forward{
+        box-sizing: border-box;
         width: 90px;
         height: 100%;
         @include flex-center();
@@ -107,12 +110,16 @@
           width: 27px;
           height: 27px;
           margin-right: 5px;
-          border: 0;
         }
 
         div{
           font-size: 14px;
         }
+      }
+      .like:hover,
+      .collection:hover,
+      .forward:hover{
+        color: red;
       }
     }
     .comments{
@@ -124,6 +131,7 @@
         margin: 8px 0 0 0;
         font-size: 14px;
         line-height: 20px;
+        cursor: pointer;
         .obj{
           span{
             color: #DE505E;
@@ -132,6 +140,10 @@
             color: #000;
           }
         }
+      }
+
+      .commentList:hover{
+        background-color: #FFECEC;
       }
 
       .tocomment{
