--- a/src/assets/scss/community/index.scss
+++ b/src/assets/scss/community/index.scss
@@ -9,71 +9,116 @@
     width: 100%;
     max-width: 1000px;
     box-sizing: border-box;
-    // background-color: #FFE5E5;
+    padding: 20px;
+    background-color: rgba(#4F4F4F, .1);
     display: flex;
 
+    .navs{
+      width: 120px;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      
+      dl{
+        width: 100%;
+        
+        dt{
+          width: 100%;
+          height: 40px;
+          line-height: 30px;
+        }
+
+        dd{
+          width: 100%;
+          height: 30px;
+          line-height: 30px;
+          font-size: 15px;
+          @include flex-center();
+          cursor: pointer;
+        }
+
+        dd:hover{
+          background-color: #ff9797;
+          transition: background-color .5s;
+        }
+      }
+    }
+
     .main{
+      // margin-top: 20px;
       width: 700px;
       // background-color: #B6FFDC;
       display: flex;
       flex-direction: column;
       align-items: center;
 
-      .nav{
-        width: 70%;
-        height: 40px;
-        box-sizing: border-box;
-        margin: 20px 0;
-        @include flex-center();
-        list-style: none;
-        background-color: #fff;
+      // .nav{
+      //   width: 70%;
+      //   height: 40px;
+      //   box-sizing: border-box;
+      //   margin: 20px 0;
+      //   @include flex-center();
+      //   list-style: none;
+      //   background-color: #fff;
+      //   border-radius: 2px;
+      //   box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+
+      //   li{
+      //     flex: 1;
+      //     @include flex-center(column);
+
+      //     .el-dropdown-link {
+      //       cursor: pointer;
+      //       font-size: 17px;
+      //     }
+      //     .el-icon-arrow-down {
+      //       font-size: 14px;
+      //     }
+      //   }
+      // }
+      // 
+      .publish{
+        width: 100%;
+        height: 50px;
         border-radius: 2px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+        margin-bottom: 20px;
+        // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+        background-color: #fff;
+        @include flex-center();
 
-        li{
+        .publishDesc{
+          flex: 4;
+          @include flex-center();
+        }
+
+        .publishBtn{
           flex: 1;
-          @include flex-center(column);
-
-          .el-dropdown-link {
-            cursor: pointer;
-            font-size: 17px;
-          }
-          .el-icon-arrow-down {
-            font-size: 14px;
-          }
+          @include flex-center();
         }
       }
 
       .posts{
         width: 95%;
         list-style: none;
-
-        // li{
-        //   width: 100%;
-        //   margin-bottom: 30px;
-        //   list-style: none;
-        //   background-color: #FFBFE1;
-        // }
       }
 
     }
 
     .aside{
-      margin-top: 78px;
-      margin-left: 60px;
-      width: 220px;
+      // margin-top: 20px;
+      width: 200px;
       height: 550px;
       display: flex;
       flex-direction: column;
       box-sizing: border-box;
-      padding: 0 10px;
 
       .youLike{
         flex: 1;
         width: 100%;
         background-color: #fff;
         // box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-        box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+        // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
       }
 
       .recommend{
@@ -82,7 +127,7 @@
         margin-top: 20px;
         background-color: #fff;
         // box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-        box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+        // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
       }
     }
 
