--- a/src/assets/scss/pubComponents/cosmeticItem.scss
+++ b/src/assets/scss/pubComponents/cosmeticItem.scss
@@ -11,7 +11,7 @@
     background-color: #fff;
     margin: 10px 15px;
     box-sizing: border-box;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+    // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
 
     img{
       width: 100%;
