--- a/src/assets/scss/pubComponents/postItem.scss
+++ b/src/assets/scss/pubComponents/postItem.scss
@@ -13,7 +13,7 @@
     padding: 10px;
     display: flex;
     background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+    // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
     border-radius: 2px;
     cursor: pointer;
 
