公共组件修改及个人中心页完善

--- a/src/assets/scss/mall/_index.scss
+++ b/src/assets/scss/mall/_index.scss
@@ -21,6 +21,8 @@
       .title{
         width: 150px;
         height: 100%;
+        font-size: 22px;
+        color: #fff;
         @include flex-center(columns);
       }
 
