--- a/src/assets/scss/community/postDetails.scss
+++ b/src/assets/scss/community/postDetails.scss
@@ -5,8 +5,8 @@
   @include flex-center(column);
 
   .container{
-    width: 800px;
-    min-height: 600px;
+    width: 100%;
+    max-width: 900px;
     // background-color: #BDF9E5;
     display: flex;
     flex-direction: column;
@@ -15,6 +15,7 @@
     .detail-title{
       margin: 30px 0;
       font-size: 20px;
+      color: #fff;
     }
 
     .post{
