--- a/src/assets/scss/footer/_footer.scss
+++ b/src/assets/scss/footer/_footer.scss
@@ -6,7 +6,7 @@
 
   .el-row{
     height: 100%;
-    background-color: #F0F0F0;
+    background-color: #fff;
 
     .el-col{
       @include flex-center(column);
