--- a/src/assets/scss/login/_index.scss
+++ b/src/assets/scss/login/_index.scss
@@ -15,10 +15,54 @@
     @include flex-center(column);
 
     .loginbox{
+      position: relative;
       width: 500px;
-      height: 350px;
+      height: 280px;
       background-color: #fff;
       border-radius: 4px;
+      box-sizing: border-box;
+      padding: 10px 50px;
+
+      .el-form-item{
+        margin-bottom: 20px;
+      }
+
+      .title{
+        font-size: 20px;
+        font-weight: bold;
+        height: 60px;
+        line-height: 60px;
+        margin-bottom: 10px;
+        text-align: center;
+      }
+
+      .operate{
+        text-align: center;
+        margin-top: 20px;
+
+        .tip{
+          font-size: 14px;
+          text-align: right;
+          margin-top: 15px;
+
+          .words{
+            
+            .link{
+              color: #5F8FEC;
+              cursor: pointer;
+            }
+          }
+        }
+      }
+      .el-icon-close{
+        position: absolute;
+        color: #fff;
+        font-weight: bold;
+        font-size: 30px;
+        top: -24px;
+        right: -24px;
+        cursor: pointer;
+      }
     }
   }
 }
