--- a/src/assets/scss/mall/mallIndex/_index.scss
+++ b/src/assets/scss/mall/mallIndex/_index.scss
@@ -12,31 +12,56 @@
     display: flex;
 
     .navbar{
+      position: relative;
       width: 200px;
       height: 100%;
-      // background-color: #fff;
       color: #fff;
       list-style: none;
       @include flex-center(column);
+      // background-color: rgba(#000, .7);
 
       li{
         flex: 1;
         width: 100%;
         @include flex-center(column);
-        box-sizing: border-box;
-        border-bottom: 1px solid #FFBCBC;
-        border-left: 1px solid #FFBCBC;
+        box-sizing: padding-box;
+        border-bottom: 1px solid #FFA6A6;
+        border-left: 3px solid #FFBCBC;
         cursor: pointer;
+
+        // .li-title{
+        //   width: 100%;
+        //   height: 100%;
+        // }
       }
 
       li:first-child{
-        border-top: 1px solid #FFBCBC;
+        border-top: 3px solid #FFBCBC;
+      }
+
+      li:last-child{
+        border-bottom: 3px solid #FFBCBC;
       }
 
       li:hover{
         background-color: #FFEDED;
         color: #000;
-        transition: background-color 1s;
+        transition: background-color .5s;
+      }
+
+      .navbar2{
+        position: absolute;
+        top: 0;
+        left: 200px;
+        width: 960px;
+        height: 300px;
+        background-color: rgba(#FFEDED, .9);
+        z-index: 120;
+        display: none;
+      }
+
+      li:hover .navbar2{
+        display: block;
       }
     }
 
@@ -46,6 +71,30 @@
       img{
         width: 100%;
         height: 100%;
+      }
+    }
+  }
+
+  .mallIndex-section{
+    box-sizing: border-box;
+    padding: 30px 0;
+
+    .mallLIst{
+      // margin: 30px 0;
+      // background-color: #fff;
+
+      .title{
+        width: 200px;
+        height: 40px;
+        line-height: 38px;
+        // border-bottom: 2px solid #fff;
+        font-size: 20px;
+        color: #fff;
+        margin-left: 16px;
+      }
+
+      ul{
+        list-style: none;
       }
     }
   }
