--- a/src/assets/scss/pubComponents/cosmeticItem.scss
+++ b/src/assets/scss/pubComponents/cosmeticItem.scss
@@ -11,17 +11,35 @@
     background-color: #fff;
     margin: 10px 15px;
     box-sizing: border-box;
+    padding: 10px;
+    // @include flex-center(column);
     // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
 
-    img{
+    .image{
       width: 100%;
-      height: 135px;
+      height: 125px;
+
+      img{
+        width: 100%;
+        height: 100%;
+      }
     }
 
-    .desc{
-      text-align: center;
-      padding: 2px;
+    .cosmetic-info{
+      width: 100%;
+      @include flex-center();
+
+      .desc{
+        width: 100%;
+        height: 35px;
+        @include flex-center(column);
+      }
+
+      .price{
+        margin-right: 10px;
+        color: #f00;
+        font-size: 18px;
+      }
     }
   }
-  
 }
