--- a/src/assets/scss/pubComponents/postItem.scss
+++ b/src/assets/scss/pubComponents/postItem.scss
@@ -7,31 +7,102 @@
 
   .hotPostsList-item{
     width: 355px;
-    height: 100px;
     margin: 10px 15px;
     box-sizing: border-box;
     padding: 10px;
     display: flex;
+    flex-wrap: wrap;
     background-color: #fff;
     // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
     border-radius: 2px;
     cursor: pointer;
 
-    img{
-      width: 120px;
-      height: 80px;
+    .user{
+      width: 100%;
+      height: 40px;
+      display: flex;
+      // border: 1px solid #939393;
+
+      .userInfo{
+        display: flex;
+        flex: 2;
+
+        .avatar{
+          width: 40px;
+          height: 40px;
+          // border: 1px solid #808080;
+          border-radius: 50%;
+          box-sizing: border-box;
+          // margin: 5px;
+
+          img{
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+          }
+        }
+
+        .name-time{
+          height: 40px;
+          display: flex;
+          flex-direction: column;
+          margin: 0 8px;
+
+          .name{
+            font-size: 15px;
+          }
+          .time{
+            font-size: 10px;
+            margin-top: 6px;
+          }
+        }
+      }
+      .attent{
+        flex: 1;
+        width: 120px;
+        height: 40px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        // background-color: #FFC6C6;
+        
+        // .el-button--mini{
+        //   width: 70px;
+        //   height: 25px;
+        // }
+      }
     }
 
-    div{
-      max-width: 200px;
-      margin: 0 5px 0 10px;
-      font-size: 14px;
-      white-space:wrap;
-      overflow: hidden;
-      text-overflow:ellipsis;
-      box-sizing: border-box;
-      padding: 2px;
-      color: #606060;
+    .postItem-main{
+      width: 100%;
+      margin-top: 10px;
+      display: flex;
+      justify-content: flex-start;
+      // border: 1px solid #808080;
+
+      .image{
+        width: 120px;
+        height: 80px;
+
+        img{
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .desc{
+        max-width: 200px;
+        height: 80px;
+        margin: 0 5px 0 10px;
+        font-size: 14px;
+        white-space:wrap;
+        overflow: hidden;
+        text-overflow:ellipsis;
+        box-sizing: border-box;
+        padding: 2px;
+        color: #606060;
+        overflow: hidden;
+      }
     }
   }
 }
