--- a/src/assets/scss/community/postList.scss
+++ b/src/assets/scss/community/postList.scss
@@ -2,7 +2,7 @@
 @import "../public/mixins.scss";
 
 #postList{
-  .postList-li{
+  .postList-li-1{
     box-sizing: border-box;
     background-color: #fff;
     box-sizing: border-box;
