--- a/src/assets/scss/mine/myProfile/_index.scss
+++ b/src/assets/scss/mine/myProfile/_index.scss
@@ -3,39 +3,54 @@
 
 #myProfile{
 	margin: 20px 0;
-	color: #fff;
-
-	.myProfile-title{
+	@include flex-center();
+	// color: #fff;
+	// background-color: #fff;
+	
+	.myProfile-box{
 		width: 100%;
-		height: 40px;
-		text-align: center;
-		line-height: 40px;
-		font-size: 20px;
-	}
-
-	.myProfile-main{
-		width: 100%;
+		max-width: 800px;
+		background-color: #fff;
 		box-sizing: border-box;
-		padding: 20px 40px;
-		@include flex-center();
-		
-		.myProfile-main-ul{
-			list-style: none;
+		padding: 20px;
+		border-radius: 4px;
 
-			li{
-				display: flex;
-				align-items: center;
-				margin-bottom: 15px;
-				padding: 10px 0;
+		.myProfile-title{
+			width: 100%;
+			height: 40px;
+			text-align: center;
+			line-height: 40px;
+			font-size: 20px;
+		}
 
-				.item-name{
-					width: 100px;
-				}
+		.myProfile-main{
+			width: 100%;
+			box-sizing: border-box;
+			padding: 20px 40px;
+			@include flex-center();
+			
+			.myProfile-main-ul{
+				list-style: none;
 
-				.item-body{
-					width: 500px;
+				li{
+					display: flex;
+					align-items: center;
+					margin-top: 15px;
+					padding: 10px 0;
+
+					.item-name{
+						width: 100px;
+					}
+
+					.item-body{
+						width: 500px;
+					}
 				}
 			}
+		}
+		.submit{
+			width: 100%;
+			@include flex-center();
 		}
 	}
 }
