--- a/src/assets/scss/pubComponents/cosmeticItem.scss
+++ b/src/assets/scss/pubComponents/cosmeticItem.scss
@@ -12,6 +12,7 @@
     margin: 10px 15px;
     box-sizing: border-box;
     padding: 10px;
+    cursor: pointer;
     // @include flex-center(column);
     // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
 
