--- a/src/assets/scss/register/_index.scss
+++ b/src/assets/scss/register/_index.scss
@@ -10,7 +10,11 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(#000, .3);
+    // background-color: rgba(#000, .3);
+    background-image: url('~@/assets/images/bg1.jpg');
+    background-size: 100vw 100vh;
+    background-origin: top left;
+    background-attachment: fixed;
     z-index: 10000;
     @include flex-center(column);
 
