--- a/src/assets/scss/header/_header.scss
+++ b/src/assets/scss/header/_header.scss
@@ -26,14 +26,92 @@
       }
 
       .search{
+        position: relative;
         width: 100%;
         @include flex-center(column);
 
-        .el-input{
-          width: 90%;
+        .input{
+          width: 100%;
+
+          .hoverRecommendCon{
+            padding: 20px 0;
+            position: absolute;
+            top: 27px;
+            left: 0;
+            width: 100%;
+            height: 220px;
+            z-index: 1000;
+
+            .hoverRecommend{
+              background-color: #fff;
+              box-shadow: 0 0 2px #A3A3A3;
+              border-radius: 2px;
+              box-sizing: border-box;
+              padding: 10px 0;
+              color: #000;
+
+              .youLike{
+                height: 80px;
+
+                .y-title{
+                  height: 30px;
+                  line-height: 30px;
+                  box-sizing: border-box;
+                  padding-left: 10px;
+                }
+                ul{
+                  display: flex;
+                  flex-wrap: wrap;
+                  list-style: none;
+                  font-size: 13px;
+                  color: #555555;
+
+                  li{
+                    margin: 2px 10px;
+                    box-sizing: border-box;
+                    padding-left: 5px;
+                    cursor: pointer;
+                  }
+                  li:hover{
+                    color: #ff9797;
+                  }
+                }
+              }
+              .hotSearch{
+                height: 120px;
+
+                .h-title{
+                  height: 30px;
+                  line-height: 30px;
+                  box-sizing: border-box;
+                  padding-left: 10px;
+                }
+                ul{
+                  display: flex;
+                  flex-wrap: wrap;
+                  list-style: none;
+                  font-size: 13px;
+                  color: #555555;
+
+                  li{
+                    margin: 2px 10px;
+                    box-sizing: border-box;
+                    padding-left: 5px;
+                    cursor: pointer;
+                  }
+                  li:hover{
+                    color: #ff9797;
+                  }
+                }
+              }
+            }
+            display: none;
+          }
+        }
+        .input:hover .hoverRecommendCon{
+          display: block;
         }
       }
-      
 
       .nav{
         width: 100%;
