--- a/src/assets/scss/pubComponents/userList.scss
+++ b/src/assets/scss/pubComponents/userList.scss
@@ -4,7 +4,7 @@
 #userList{
   margin: 20px 0;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-wrap: wrap;
   
   .userList-li{
@@ -13,7 +13,7 @@
     background-color: #fff;
     box-sizing: border-box;
     padding: 15px;
-    margin: 9px;
+    margin: 9px 0;
     border-radius: 2px;
     list-style: none;
     cursor: pointer;
