--- a/src/assets/scss/community/index.scss
+++ b/src/assets/scss/community/index.scss
@@ -12,6 +12,7 @@
     padding: 20px;
     background-color: rgba(#4F4F4F, .1);
     display: flex;
+    // border: 2px solid #000;
 
     .navs{
       width: 120px;
@@ -19,6 +20,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      // border: 2px solid #000;
+      position: fixed;
       
       dl{
         width: 100%;
@@ -52,6 +55,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      margin-left: 130px;
+      margin-right: 220px;
 
       // .nav{
       //   width: 70%;
@@ -114,24 +119,27 @@
     .aside{
       // margin-top: 20px;
       width: 200px;
-      height: 550px;
-      display: flex;
+      // height: 550px;
       flex-direction: column;
       box-sizing: border-box;
+      // border: 2px solid #000;
+      position: fixed;
+      top: 80px;
+      right: 280px;
 
       .youLike{
-        flex: 1;
         width: 100%;
         background-color: #fff;
+        padding-bottom: 3px;
         // box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
         // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
       }
 
       .recommend{
-        flex: 1;
         width: 100%;
         margin-top: 20px;
         background-color: #fff;
+        padding-bottom: 3px;
         // box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
         // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
       }
