--- a/src/assets/scss/index/_styleMigration.scss
+++ b/src/assets/scss/index/_styleMigration.scss
@@ -3,104 +3,264 @@
 
 #styleMigration{
   @include flex-center();
-
+  
   .container{
     width: 100%;
-    max-width: 1200px;
+    max-width: 1000px;
     box-sizing: border-box;
     padding: 20px;
     background-color: rgba(#4F4F4F, .2);
 
-    .select{
-      width: 100%;
-      height: 400px;
-      box-sizing: border-box;
-      padding: 20px 20px 0;
+    .sectionA{
       background-color: #fff;
-      display: flex;
-      flex-wrap: wrap;
+      box-sizing: border-box;
+      padding: 20px;
 
-      .myPhoto{
-        flex: 2;
+      .example{
+        width: 100%;
         height: 300px;
-        // background-color: #fff;
-        border-radius: 2px;
-        
-        .title{
-          // color: #fff;
-          font-size: 17px;
+        background-color: #fff;
+        display: flex;
+        justify-content: space-between;
+
+        .pic1, .pic2, .pic3{
+          width: 200px;
+          border: 1px solid #ADADAD;
+          padding: 10px;
+          border-radius: 4px;
+
+          img{
+            width: 100%;
+            height: 100%;
+          }
         }
 
-        .upload{
-          margin-top: 50px;
+        .add, .arrow{
+          height: 300px;
+          line-height: 300px;
+          font-size: 40px;
+          color: #FF6565;
         }
       }
 
-      .fusionPhoto{
-        flex: 5;
-        height: 300px;
-        // background-color: #fff;
-        border-radius: 2px;
-        margin-left: 30px;
+      // 自己的照片
+      .myPicture{
+        width: 100%;
+        margin: 50px 0;
+        box-sizing: border-box;
 
         .title{
-          // color: #fff;
-          font-size: 17px;
-        }
-
-        .styleList{
-          list-style: none;
           width: 100%;
-          height: 45px;
+          height: 60px;
+          line-height: 60px;
+          font-size: 20px;
+          border-bottom: 2px solid #D7D7D7;
+          text-shadow: 2px 2px 3px #444444;
+        }
+        .select{
           display: flex;
+          justify-content: space-between;
           align-items: center;
 
-          li{
-            @include flex-center(column);
-            margin-right: 20px;
-          }
-        }
-
-        .images{
-          width: 100%;
-          height: 190px;
-          display: flex;
-          list-style: none;
-
-          li{
-            flex: 1;
-            // background-color: #FFBFBF;
-            margin: 2px;
+          .image{
+            width: 200px;
+            // height: 300px;
+            border: 1px solid #ADADAD;
             border-radius: 4px;
+            padding: 10px;
 
             img{
-
+              width: 100%;
+              height: 100%;
             }
           }
         }
-        .pagenation{
+        .dragUpload{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 650px;
+          height: 250px;
+        }
+      }
+
+      // 模板图
+      .tempPicture{
+        width: 100%;
+        box-sizing: border-box;
+        // border: 1px solid #686868;
+
+        .title{
           width: 100%;
-          height: 50px;
-          @include flex-center(column);
+          height: 60px;
+          line-height: 60px;
+          font-size: 20px;
+          border-bottom: 2px solid #D7D7D7;
+          text-shadow: 2px 2px 3px #444444;
+        }
+
+        .select{
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          .image{
+            width: 200px;
+            // height: 300px;
+            border: 1px solid #ADADAD;
+            border-radius: 4px;
+            padding: 10px;
+
+            img{
+              width: 100%;
+              height: 100%;
+            }
+          }
+          .tempSelect{
+            width: 650px;
+            height: 300px;
+            // border: 1px solid #B1B1B1;
+
+            .head{
+              line-height: 50px;
+            }
+
+            .images{
+              height: 150px;
+              // border: 1px solid #000;
+              display: flex;
+              justify-content: space-between;
+
+              li{
+                width: 120px;
+                height: 150px;
+                list-style: none;
+
+                img{
+                  width: 100%;
+                  height: 100%;
+                }
+              }
+            }
+            .pagenation{
+              height: 50px;
+              @include flex-center(column);
+            }
+            .selectPictrue{
+              @include flex-center();
+
+              .tip{
+                margin-right: 30px;
+              }
+            }
+          }
         }
       }
 
       .submit{
-        width: 100%;
-        height: 80px;
+        margin-top: 30px;
         @include flex-center(column);
       }
     }
-
-    .result{
-      width: 100%;
-      height: 500px;
-      box-sizing: border-box;
-      padding: 20px;
-      margin-top: 20px;
-      background-color: #fff;
-      display: flex;
-    }
   }
+
+  // .container{
+  //   width: 100%;
+  //   max-width: 1200px;
+  //   box-sizing: border-box;
+  //   padding: 20px;
+  //   background-color: rgba(#4F4F4F, .2);
+
+  //   .select{
+  //     width: 100%;
+  //     height: 400px;
+  //     box-sizing: border-box;
+  //     padding: 20px 20px 0;
+  //     background-color: #fff;
+  //     display: flex;
+  //     flex-wrap: wrap;
+
+  //     .myPhoto{
+  //       flex: 2;
+  //       height: 300px;
+  //       // background-color: #fff;
+  //       border-radius: 2px;
+        
+  //       .title{
+  //         // color: #fff;
+  //         font-size: 17px;
+  //       }
+
+  //       .upload{
+  //         margin-top: 50px;
+  //       }
+  //     }
+
+  //     .fusionPhoto{
+  //       flex: 5;
+  //       height: 300px;
+  //       // background-color: #fff;
+  //       border-radius: 2px;
+  //       margin-left: 30px;
+
+  //       .title{
+  //         // color: #fff;
+  //         font-size: 17px;
+  //       }
+
+  //       .styleList{
+  //         list-style: none;
+  //         width: 100%;
+  //         height: 45px;
+  //         display: flex;
+  //         align-items: center;
+
+  //         li{
+  //           @include flex-center(column);
+  //           margin-right: 20px;
+  //         }
+  //       }
+
+  //       .images{
+  //         width: 100%;
+  //         height: 190px;
+  //         display: flex;
+  //         list-style: none;
+
+  //         li{
+  //           flex: 1;
+  //           // background-color: #FFBFBF;
+  //           margin: 2px;
+  //           border-radius: 4px;
+
+  //           img{
+
+  //           }
+  //         }
+  //       }
+  //       .pagenation{
+  //         width: 100%;
+  //         height: 50px;
+  //         @include flex-center(column);
+  //       }
+  //     }
+
+  //     .submit{
+  //       width: 100%;
+  //       height: 80px;
+  //       @include flex-center(column);
+  //     }
+  //   }
+
+  //   .result{
+  //     width: 100%;
+  //     height: 500px;
+  //     box-sizing: border-box;
+  //     padding: 20px;
+  //     margin-top: 20px;
+  //     background-color: #fff;
+  //     display: flex;
+  //   }
+  // }
   
 }
