--- a/src/assets/scss/community/index.scss
+++ b/src/assets/scss/community/index.scss
@@ -7,21 +7,27 @@
   .container{
     position: relative;
     width: 100%;
-    max-width: 1000px;
+    max-width: 1100px;
     box-sizing: border-box;
-    padding: 20px;
-    background-color: rgba(#4F4F4F, .1);
+    // padding: 0 20px;
+    margin: 20px 0;
     display: flex;
     // border: 2px solid #000;
 
     .navs{
-      width: 120px;
-      color: #fff;
+      width: 160px;
+      height: 100%;
+      color: #000;
       display: flex;
       flex-direction: column;
       align-items: center;
-      // border: 2px solid #000;
+      box-sizing: border-box;
+      padding: 10px;
+      background-color: #fff;
       position: fixed;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+      // box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+      border-radius: 2px;
       
       dl{
         width: 100%;
@@ -33,29 +39,53 @@
         }
 
         dd{
-          width: 100%;
+          width: 60%;
           height: 30px;
           line-height: 30px;
           font-size: 15px;
           @include flex-center();
           cursor: pointer;
+          margin: 0 auto;
+          // border-bottom: 1px solid #DADADA;
         }
 
         dd:hover{
-          background-color: #ff9797;
-          transition: background-color .5s;
+          color: #ff9797;
+          cursor: pointer;
         }
+
+        .navActive{
+          background-color: #FFD2D2;
+          transition: background-color 1s;
+          border-radius: 30px 0 30px 0;
+        }
+      }
+      dl:first-child{
+        margin-bottom: 20px;
+      }
+
+      .aboutMe{
+        margin-top: 50px;
+        width: 100%;
+        height: 40px;
+        border-top: 1px solid #DADADA;
+        border-bottom: 1px solid #DADADA;
+        @include flex-center();
+      }
+      .aboutMe:hover{
+        color: #ff9797;
+        cursor: pointer;
       }
     }
 
     .main{
       // margin-top: 20px;
       width: 700px;
-      // background-color: #B6FFDC;
+      // background-color: #F3F3F3;
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-left: 130px;
+      margin-left: 177px;
       margin-right: 220px;
 
       // .nav{
@@ -89,9 +119,10 @@
         height: 50px;
         border-radius: 2px;
         margin-bottom: 20px;
-        // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
         background-color: #fff;
         @include flex-center();
+
 
         .publishDesc{
           @include flex-center(column);
@@ -117,22 +148,20 @@
     }
 
     .aside{
-      // margin-top: 20px;
       width: 200px;
-      // height: 550px;
       flex-direction: column;
       box-sizing: border-box;
       // border: 2px solid #000;
       position: fixed;
-      top: 80px;
-      right: 280px;
+      margin-left: 890px;
 
       .youLike{
         width: 100%;
         background-color: #fff;
         padding-bottom: 3px;
+        // margin-top: 10px;
         // box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-        // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
       }
 
       .recommend{
@@ -141,7 +170,7 @@
         background-color: #fff;
         padding-bottom: 3px;
         // box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-        // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
       }
     }
 
