--- a/src/assets/scss/community/postList.scss
+++ b/src/assets/scss/community/postList.scss
@@ -11,6 +11,7 @@
     list-style: none;
     margin-bottom: 20px;
     // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+    // box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
 
     .user{
       height: 50px;
