--- a/src/assets/scss/header/_header.scss
+++ b/src/assets/scss/header/_header.scss
@@ -18,10 +18,16 @@
       .logo{
         @include flex-center(column);
 
-        img{
+        a{
           width: 55px;
           height: 55px;
           border-radius: 50%;
+          
+          img{
+            width: 55px;
+            height: 55px;
+            border-radius: 50%;
+          }
         }
       }
 
@@ -131,7 +137,7 @@
             cursor: pointer;
             // background-color: #FFDDDD;
             text-decoration: none;
-            // border-radius: 60px 0 60px 0;
+            border-radius: 60px 0 60px 0;
             // border-radius: 60px 0 60px 0;
             
           }
@@ -151,6 +157,9 @@
   .router-link-active {
     background-color: #FFCFCF;
     transition: background-color 1s;
+    // background-image: url('~@/assets/images/nav-back.png');
+    // background-size: 100% 100%;
+    // transition: background-color 1s;
   }
 }
 
