--- a/src/assets/scss/index/_index.scss
+++ b/src/assets/scss/index/_index.scss
@@ -10,15 +10,16 @@
     box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
-    background-color: rgba(#4F4F4F, .2);
+    // background-color: $mask-color;
 
     .banner{
       width: 100%;
       height: 300px;
       @include flex-center();
       margin: 20px 0;
-      box-sizing: border-box;
-      padding: 0 35px;
+      // box-sizing: border-box;
+      padding: 20px 35px;
+      background-color: #fff;
 
       .picStyle{
         flex: 1;
@@ -48,8 +49,10 @@
 
     .main{
       width: 100%;
-      // background-color: #fff;
-      margin-top: 20px;
+      margin-top: 10px;
+      background-color: #fff;
+      box-sizing: border-box;
+      padding: 0 10px;
       // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
 
       .list{
@@ -69,128 +72,24 @@
           box-sizing: border-box;
           padding: 0 0 20px;
           list-style: none;
-
-          // .youLikeList-item{
-          //   @include flex-center();
-
-          //   // .youLikeList1-item{
-          //   //   width: 355px;
-          //   //   height: 90px;
-          //   //   margin: 10px 15px;
-          //   //   box-sizing: border-box;
-          //   //   padding: 5px;
-          //   //   display: flex;
-          //   //   background-color: #fff;
-          //   //   box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
-          //   //   border-radius: 2px;
-          //   //   cursor: pointer;
-
-          //   //   img{
-          //   //     width: 120px;
-          //   //     height: 80px;
-          //   //   }
-
-          //   //   div{
-          //   //     max-width: 200px;
-          //   //     margin: 0 5px 0 10px;
-          //   //     font-size: 14px;
-          //   //     white-space:wrap;
-          //   //     overflow: hidden;
-          //   //     text-overflow:ellipsis;
-          //   //     box-sizing: border-box;
-          //   //     padding: 2px;
-          //   //   }
-          //   // }
-
-          //   // .youLikeList2-item{
-          //   //   width: 259px;
-          //   //   height: 170px;
-          //   //   background-color: #fff;
-          //   //   margin: 10px 15px;
-          //   //   box-sizing: border-box;
-          //   //   box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
-
-          //   //   img{
-          //   //     width: 100%;
-          //   //     height: 135px;
-          //   //   }
-
-          //   //   .desc{
-          //   //     text-align: center;
-          //   //     padding: 2px;
-          //   //   }
-          //   // }
-          // }
-
-          
         }
 
         .hotPostsList{
           width: 100%;
           box-sizing: border-box;
-          padding: 0 20px 20px;
+          // padding: 0 0 20px;
           list-style: none;
           @include flex-center();
           flex-wrap: wrap;
-          
-          // .postItem{
-          //   width: 355px;
-          //   height: 100px;
-          //   margin: 10px 15px;
-          //   box-sizing: border-box;
-          //   padding: 10px;
-          //   display: flex;
-          //   background-color: #fff;
-          //   box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
-          //   border-radius: 2px;
-          //   cursor: pointer;
-
-          //   img{
-          //     width: 120px;
-          //     height: 80px;
-          //   }
-
-          //   div{
-          //     max-width: 200px;
-          //     margin: 0 5px 0 10px;
-          //     font-size: 14px;
-          //     white-space:wrap;
-          //     overflow: hidden;
-          //     text-overflow:ellipsis;
-          //     box-sizing: border-box;
-          //     padding: 2px;
-
-          //     color: #606060;
-          //   }
-          // }
         }
 
         .hotCosmeticsList{
           width: 100%;
           box-sizing: border-box;
-          padding: 0 20px 20px;
+          padding: 0 0 20px;
           list-style: none;
           @include flex-center();
           flex-wrap: wrap;
-          
-          // .hotCosmeticsList-item{
-          //   width: 259px;
-          //   height: 170px;
-          //   background-color: #fff;
-          //   margin: 10px 15px;
-          //   box-sizing: border-box;
-          //   box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
-
-          //   img{
-          //     width: 100%;
-          //     height: 135px;
-          //   }
-
-          //   .desc{
-          //     text-align: center;
-          //     padding: 2px;
-          //   }
-          // }
         }
       }
     }
