--- a/src/assets/scss/index/_styleMigration.scss
+++ b/src/assets/scss/index/_styleMigration.scss
@@ -6,15 +6,16 @@
   
   .container{
     width: 100%;
-    max-width: 1000px;
+    max-width: 1100px;
     box-sizing: border-box;
-    padding: 20px;
-    background-color: rgba(#4F4F4F, .2);
+    margin-top: 20px;
+    // padding: 20px;
+    background-color: $mask-color;
 
     .sectionA{
       background-color: #fff;
       box-sizing: border-box;
-      padding: 20px;
+      padding: 40px;
 
       .example{
         width: 100%;
@@ -27,7 +28,7 @@
           width: 200px;
           border: 1px solid #ADADAD;
           padding: 10px;
-          border-radius: 4px;
+          border-radius: 2px;
 
           img{
             width: 100%;
@@ -46,7 +47,7 @@
       // 自己的照片
       .myPicture{
         width: 100%;
-        margin: 50px 0;
+        // margin: 50px 0;
         box-sizing: border-box;
 
         .title{
@@ -54,13 +55,14 @@
           height: 60px;
           line-height: 60px;
           font-size: 20px;
-          border-bottom: 2px solid #D7D7D7;
+          // border-bottom: 2px solid #D7D7D7;
           text-shadow: 2px 2px 3px #444444;
         }
         .select{
           display: flex;
           justify-content: space-between;
           align-items: center;
+          margin-top: 20px;
 
           .image{
             width: 200px;
@@ -95,7 +97,7 @@
           height: 60px;
           line-height: 60px;
           font-size: 20px;
-          border-bottom: 2px solid #D7D7D7;
+          // border-bottom: 2px solid #D7D7D7;
           text-shadow: 2px 2px 3px #444444;
         }
 
@@ -103,6 +105,7 @@
           display: flex;
           justify-content: space-between;
           align-items: center;
+          margin-top: 20px;
 
           .image{
             width: 200px;
