--- a/src/assets/scss/mall/mallIndex/_index.scss
+++ b/src/assets/scss/mall/mallIndex/_index.scss
@@ -4,18 +4,21 @@
 #mallIndex{
   width: 100%;
   box-sizing: border-box;
-  padding: 20px;
+  // padding: 0 20px;
 
   .banner{
     width: 100%;
-    height: 300px;
+    height: 320px;
     display: flex;
+    box-sizing: border-box;
+    padding: 0 20px 20px 20px;
+    background-color: #fff;
 
     .navbar-ul{
       position: relative;
       width: 200px;
       height: 100%;
-      color: #fff;
+      color: #000;
       list-style: none;
       @include flex-center(column);
       // background-color: rgba(#000, .7);
@@ -25,8 +28,9 @@
         width: 100%;
         @include flex-center(column);
         box-sizing: padding-box;
-        border-bottom: 1px solid #FFA6A6;
-        border-left: 3px solid #FFBCBC;
+        background-color: #fff;
+        border-bottom: 1px solid #F0F0F0;
+        border-left: 1px solid #D6D6D6;
         cursor: pointer;
 
         // .li-title{
@@ -36,15 +40,17 @@
       }
 
       .navbar-li:first-child{
-        border-top: 3px solid #FFBCBC;
+        border-top: 1px solid #D6D6D6;
       }
 
       .navbar-li:last-child{
-        border-bottom: 3px solid #FFBCBC;
+        border-bottom: 1px solid #D6D6D6;
       }
 
       .navbar-li:hover{
-        background-color: #FFEDED;
+        background-color: #FFE9E9;
+        // border-top: 1px solid #D6D6D6;
+        // border-bottom: 1px solid #D6D6D6;
         color: #000;
         transition: background-color .5s;
       }
@@ -55,11 +61,13 @@
         left: 200px;
         width: 960px;
         height: 300px;
-        background-color: rgba(#FFEDED, .9);
+        box-sizing: border-box;
+        background-color: rgba(#fff, 1);
         z-index: 120;
         display: none;
         // display: block;
         color: #000;
+        border: 1px solid #D6D6D6;
       }
 
       .navbar-li:hover .navbar2{
@@ -79,7 +87,9 @@
 
   .mallIndex-section{
     box-sizing: border-box;
-    padding: 30px 0;
+    margin: 30px 0;
+    background-color: #fff;
+    padding-top: 10px;
 
     .mallLIst{
       // margin: 30px 0;
@@ -91,8 +101,8 @@
         line-height: 38px;
         // border-bottom: 2px solid #fff;
         font-size: 20px;
-        color: #fff;
-        margin-left: 16px;
+        color: #000;
+        margin-left: 20px;
       }
 
       ul{
