--- a/src/assets/scss/pubComponents/postItem.scss
+++ b/src/assets/scss/pubComponents/postItem.scss
@@ -7,20 +7,21 @@
   justify-content: space-around;
 
   .hotPostsList-item{
-    width: 355px;
+    width: 380px;
     margin: 0 0 16px 0;
     box-sizing: border-box;
-    padding: 10px;
+    padding: 8px;
     display: flex;
     flex-wrap: wrap;
     background-color: #fff;
     // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+    border: 1px solid #E5E5E5;
     border-radius: 2px;
     cursor: pointer;
 
     .user{
       width: 100%;
-      height: 40px;
+      height: 30px;
       display: flex;
       // border: 1px solid #939393;
 
@@ -29,8 +30,8 @@
         flex: 2;
 
         .avatar{
-          width: 40px;
-          height: 40px;
+          width: 32px;
+          height: 32px;
           // border: 1px solid #808080;
           border-radius: 50%;
           box-sizing: border-box;
@@ -44,17 +45,17 @@
         }
 
         .name-time{
-          height: 40px;
+          height: 30px;
           display: flex;
           flex-direction: column;
           margin: 0 8px;
 
           .name{
-            font-size: 15px;
+            font-size: 13px;
           }
           .time{
-            font-size: 10px;
-            margin-top: 6px;
+            font-size: 8px;
+            margin-top: 3px;
           }
         }
       }
@@ -76,7 +77,7 @@
 
     .postItem-main{
       width: 100%;
-      margin-top: 10px;
+      margin-top: 8px;
       display: flex;
       justify-content: flex-start;
       // border: 1px solid #808080;
@@ -92,7 +93,7 @@
       }
 
       .desc{
-        max-width: 200px;
+        max-width: 260px;
         height: 80px;
         margin: 0 5px 0 10px;
         font-size: 14px;
