--- a/src/assets/scss/public/_variables.scss
+++ b/src/assets/scss/public/_variables.scss
@@ -1,2 +1,6 @@
 //主题色
-$theme-color: #FFBBBB;
+// $theme-color: #FFEEEE;
+$theme-color: #F3F3F3;
+// 透明辅助层
+$mask-color: #ff9797;
+// $mask-color: rgba(#000, .1);
