--- a/src/assets/scss/pubComponents/userList.scss
+++ b/src/assets/scss/pubComponents/userList.scss
@@ -8,9 +8,10 @@
   flex-wrap: wrap;
   
   .userList-li{
-    width: 315px;
+    width: 270px;
     box-sizing: border-box;
     background-color: #fff;
+    border: 1px solid #E4E4E4;
     box-sizing: border-box;
     padding: 15px;
     margin: 9px 0;
