--- a/src/assets/scss/community/index.scss
+++ b/src/assets/scss/community/index.scss
@@ -25,7 +25,8 @@
       padding: 10px;
       background-color: #fff;
       position: fixed;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+      // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+      border: 1px solid #E1E1E1;
       // box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
       border-radius: 2px;
       
@@ -88,38 +89,14 @@
       margin-left: 177px;
       margin-right: 220px;
 
-      // .nav{
-      //   width: 70%;
-      //   height: 40px;
-      //   box-sizing: border-box;
-      //   margin: 20px 0;
-      //   @include flex-center();
-      //   list-style: none;
-      //   background-color: #fff;
-      //   border-radius: 2px;
-      //   box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
-
-      //   li{
-      //     flex: 1;
-      //     @include flex-center(column);
-
-      //     .el-dropdown-link {
-      //       cursor: pointer;
-      //       font-size: 17px;
-      //     }
-      //     .el-icon-arrow-down {
-      //       font-size: 14px;
-      //     }
-      //   }
-      // }
-      // 
       .publish{
         position: relative;
         width: 100%;
         height: 50px;
         border-radius: 2px;
         margin-bottom: 20px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+        // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+        border: 1px solid #E1E1E1;
         background-color: #fff;
         @include flex-center();
 
@@ -161,7 +138,8 @@
         padding-bottom: 3px;
         // margin-top: 10px;
         // box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-        box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+        // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+        border: 1px solid #E1E1E1;
       }
 
       .recommend{
@@ -170,7 +148,8 @@
         background-color: #fff;
         padding-bottom: 3px;
         // box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-        box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+        // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+        border: 1px solid #E1E1E1;
       }
     }
 
