--- a/src/assets/scss/community/postDetails.scss
+++ b/src/assets/scss/community/postDetails.scss
@@ -11,15 +11,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #fff;
+    margin: 20px 0;
 
     .detail-title{
       margin: 30px 0;
       font-size: 20px;
-      color: #fff;
+      color: #000;
+
     }
 
     .post{
       width: 95%;
+      border: 1px solid #E1E1E1;
+      margin-bottom: 20px;
 
       .postList-li{
         box-sizing: border-box;
@@ -29,7 +34,7 @@
         border-radius: 4px;
         list-style: none;
         margin-bottom: 30px;
-        box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+        // box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
 
         .user{
           height: 50px;
@@ -77,7 +82,7 @@
         }
 
         .body{
-          margin: 8px;
+          margin: 15px 10px;
 
           p{
             font-size: 16px;
@@ -150,7 +155,7 @@
           }
 
           .commentList{
-            margin: 8px 0 0 0;
+            margin: 8px 2px 0;
             font-size: 14px;
             line-height: 20px;
             cursor: pointer;
