--- a/src/assets/scss/header/_header.scss
+++ b/src/assets/scss/header/_header.scss
@@ -120,7 +120,7 @@
       }
 
       .nav{
-        width: 100%;
+        width: 75%;
         height: 100%;
 
         ul{
@@ -135,28 +135,47 @@
             height: 100%;
             margin: 20px;
             cursor: pointer;
-            // background-color: #FFDDDD;
             text-decoration: none;
             border-radius: 60px 0 60px 0;
-            // border-radius: 60px 0 60px 0;
-            
-          }
-          a:first-child{
-            // background-color: #FFCFCF;
+            color: #000;
           }
         }
       }
     }
 
-    .me{
+    .me-1{
       span{
         cursor: pointer;
       }
+    }
+
+    .me-2{
+      display: flex;
+      align-items: center;
+      .avatar{
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+
+        img{
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+        }
+      }
+      .nickName{
+        margin-left: 15px;
+      }
+    }
+    .me-2:hover{
+      color: #ff9797;
+      cursor: pointer;
     }
   }
   .router-link-active {
     background-color: #FFCFCF;
     transition: background-color 1s;
+    // color: #ff9797;
     // background-image: url('~@/assets/images/nav-back.png');
     // background-size: 100% 100%;
     // transition: background-color 1s;
