--- a/src/assets/scss/index/_index.scss
+++ b/src/assets/scss/index/_index.scss
@@ -18,7 +18,7 @@
       @include flex-center();
       margin: 20px 0;
       // box-sizing: border-box;
-      padding: 20px 35px;
+      padding: 20px;
       background-color: #fff;
 
       .picStyle{
@@ -50,6 +50,7 @@
     .main{
       width: 100%;
       margin-top: 10px;
+      margin-bottom: 20px;
       background-color: #fff;
       box-sizing: border-box;
       padding: 0 10px;
