--- a/src/assets/scss/index/_styleMigration.scss
+++ b/src/assets/scss/index/_styleMigration.scss
@@ -6,22 +6,19 @@
   
   .container{
     width: 100%;
-    max-width: 1100px;
+    max-width: 1200px;
     box-sizing: border-box;
     margin-top: 20px;
-    // padding: 20px;
-    background-color: $mask-color;
 
     .sectionA{
-      background-color: #fff;
-      box-sizing: border-box;
-      padding: 40px;
 
       .example{
         width: 100%;
-        height: 300px;
+        height: 370px;
         background-color: #fff;
         display: flex;
+        box-sizing: border-box;
+        padding: 40px;
         justify-content: space-between;
 
         .pic1, .pic2, .pic3{
@@ -47,8 +44,10 @@
       // 自己的照片
       .myPicture{
         width: 100%;
-        // margin: 50px 0;
+        margin-top: 20px;
         box-sizing: border-box;
+        padding: 0 40px 40px 40px;
+        background-color: #fff;
 
         .title{
           width: 100%;
@@ -62,7 +61,7 @@
           display: flex;
           justify-content: space-between;
           align-items: center;
-          margin-top: 20px;
+          margin-top: 10px;
 
           .image{
             width: 200px;
@@ -76,14 +75,20 @@
               height: 100%;
             }
           }
+
+          .dragUpload{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 750px;
+            height: 250px;
+
+            .el-upload__tip{
+              text-align: center;
+            }
+          }
         }
-        .dragUpload{
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 650px;
-          height: 250px;
-        }
+        
       }
 
       // 模板图
@@ -91,13 +96,15 @@
         width: 100%;
         box-sizing: border-box;
         // border: 1px solid #686868;
+        box-sizing: border-box;
+        padding: 0 40px 20px 40px;
+        background-color: #fff;
 
         .title{
           width: 100%;
           height: 60px;
           line-height: 60px;
           font-size: 20px;
-          // border-bottom: 2px solid #D7D7D7;
           text-shadow: 2px 2px 3px #444444;
         }
 
@@ -109,7 +116,6 @@
 
           .image{
             width: 200px;
-            // height: 300px;
             border: 1px solid #ADADAD;
             border-radius: 4px;
             padding: 10px;
@@ -120,9 +126,10 @@
             }
           }
           .tempSelect{
-            width: 650px;
+            width: 750px;
             height: 300px;
-            // border: 1px solid #B1B1B1;
+            box-sizing: border-box;
+            padding: 0 40px;
 
             .head{
               line-height: 50px;
@@ -161,109 +168,16 @@
       }
 
       .submit{
-        margin-top: 30px;
+        width: 100%;
+        height: 70px;
+        background-color: #fff;
         @include flex-center(column);
       }
     }
   }
-
-  // .container{
-  //   width: 100%;
-  //   max-width: 1200px;
-  //   box-sizing: border-box;
-  //   padding: 20px;
-  //   background-color: rgba(#4F4F4F, .2);
-
-  //   .select{
-  //     width: 100%;
-  //     height: 400px;
-  //     box-sizing: border-box;
-  //     padding: 20px 20px 0;
-  //     background-color: #fff;
-  //     display: flex;
-  //     flex-wrap: wrap;
-
-  //     .myPhoto{
-  //       flex: 2;
-  //       height: 300px;
-  //       // background-color: #fff;
-  //       border-radius: 2px;
-        
-  //       .title{
-  //         // color: #fff;
-  //         font-size: 17px;
-  //       }
-
-  //       .upload{
-  //         margin-top: 50px;
-  //       }
-  //     }
-
-  //     .fusionPhoto{
-  //       flex: 5;
-  //       height: 300px;
-  //       // background-color: #fff;
-  //       border-radius: 2px;
-  //       margin-left: 30px;
-
-  //       .title{
-  //         // color: #fff;
-  //         font-size: 17px;
-  //       }
-
-  //       .styleList{
-  //         list-style: none;
-  //         width: 100%;
-  //         height: 45px;
-  //         display: flex;
-  //         align-items: center;
-
-  //         li{
-  //           @include flex-center(column);
-  //           margin-right: 20px;
-  //         }
-  //       }
-
-  //       .images{
-  //         width: 100%;
-  //         height: 190px;
-  //         display: flex;
-  //         list-style: none;
-
-  //         li{
-  //           flex: 1;
-  //           // background-color: #FFBFBF;
-  //           margin: 2px;
-  //           border-radius: 4px;
-
-  //           img{
-
-  //           }
-  //         }
-  //       }
-  //       .pagenation{
-  //         width: 100%;
-  //         height: 50px;
-  //         @include flex-center(column);
-  //       }
-  //     }
-
-  //     .submit{
-  //       width: 100%;
-  //       height: 80px;
-  //       @include flex-center(column);
-  //     }
-  //   }
-
-  //   .result{
-  //     width: 100%;
-  //     height: 500px;
-  //     box-sizing: border-box;
-  //     padding: 20px;
-  //     margin-top: 20px;
-  //     background-color: #fff;
-  //     display: flex;
-  //   }
-  // }
-  
+  .return{
+    position: absolute;
+    left: 5%;
+    top: 12%;
+  }
 }
