--- a/src/assets/scss/mall/searchDetail/_index.scss
+++ b/src/assets/scss/mall/searchDetail/_index.scss
@@ -12,14 +12,16 @@
     .navBox{
       width: 100%;
       height: 50px;
-      border-bottom: 1px solid #FFF6F6;
+      box-sizing: border-box;
+      padding: 0 30px;
+      border-bottom: 1px solid #DDDDDD;
       display: flex;
       align-items: center;
 
       .type{
         width: 120px;
         font-size: 17px;
-        color: #fff;
+        color: #000;
       }
 
       .infos{
@@ -27,11 +29,14 @@
         align-items: center;
         list-style: none;
         font-size: 15px;
-        color: #FFEEEE;
+        color: #1D88B9;
 
         li{
           margin-right: 30px;
           cursor: pointer;
+        }
+        li:hover{
+          color: #ff9797;
         }
       }
     }
@@ -58,5 +63,11 @@
     li{
       list-style: none;
     }
+  }
+
+  .return{
+    position: absolute;
+    left: 5%;
+    top: 12%;
   }
 }
