--- a/src/assets/scss/mine/myCollections/_index.scss
+++ b/src/assets/scss/mine/myCollections/_index.scss
@@ -1,36 +1,17 @@
-#myCollection{
-	margin: 30px 0;
-  box-sizing: border-box;
-  padding: 0 50px;
-}
+@import "../../public/variables.scss";
+@import "../../public/mixins.scss";
 
-// .box {
-// 	flex-direction: row;
-// 	background-color: white;
-// 	margin: 0 0 55px;
-// 	// height:900px;
-// 	display: flex;
-// 	margin-top:80px;
-// 	margin-left:50px;
-// 	margin-right:50px;
-// 	margin-bottom:80px;
-// 	flex-wrap:wrap;
-// 	justify-content:space-between;
-// }
-// .box-item {
-// 	width: 390px;
-// 	max-width:390px;
-// 	max-width:390px;
-// 	height: 160px;
-// 	line-height: 200px;
-// 	vertical-align: middle;
-// 	margin-top: 20px;
-// 	margin-bottom:20px;
-// 	margin-left: 25px;
-// 	margin-right: 25px;
-// 	background-color: #ffd200;
-// 	font-size: 100px;
-// 	color: white;
-// 	text-align: center;
-	
-// }
+#myCollection{
+	// margin: 30px 0;
+  box-sizing: border-box;
+
+  .el-tabs__nav-wrap{
+    @include flex-center();
+
+    #tab-post,
+    #tab-commodity{
+      font-size: 18px;
+      line-height:35px;
+    }
+  }
+}
