--- a/src/assets/scss/pubComponents/cosmeticItem.scss
+++ b/src/assets/scss/pubComponents/cosmeticItem.scss
@@ -7,6 +7,7 @@
   justify-content: space-around;
   
   .youLikeList-item{
+    list-style: none;
     width: 260px;
     height: 165px;
     background-color: #fff;
