--- a/src/assets/scss/pubComponents/postItem.scss
+++ b/src/assets/scss/pubComponents/postItem.scss
@@ -8,14 +8,14 @@
 
   .hotPostsList-item{
     width: 380px;
-    margin: 0 0 16px 0;
+    margin: 0 0 25px 0;
     box-sizing: border-box;
     padding: 8px;
     display: flex;
     flex-wrap: wrap;
     background-color: #fff;
     // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
-    border: 1px solid #E5E5E5;
+    border: 1px solid #DADADA;
     border-radius: 2px;
     cursor: pointer;
 
@@ -66,12 +66,6 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        // background-color: #FFC6C6;
-        
-        // .el-button--mini{
-        //   width: 70px;
-        //   height: 25px;
-        // }
       }
     }
 
@@ -80,11 +74,13 @@
       margin-top: 8px;
       display: flex;
       justify-content: flex-start;
+      align-items: center;
       // border: 1px solid #808080;
 
       .image{
         width: 120px;
-        height: 80px;
+        height: 70px;
+        margin-top: 3px;
 
         img{
           width: 100%;
@@ -96,7 +92,7 @@
         max-width: 260px;
         height: 80px;
         margin: 0 5px 0 10px;
-        font-size: 14px;
+        font-size: 11px;
         white-space:wrap;
         overflow: hidden;
         text-overflow:ellipsis;
