--- a/src/assets/scss/mall/mallIndex/_index.scss
+++ b/src/assets/scss/mall/mallIndex/_index.scss
@@ -13,6 +13,7 @@
     box-sizing: border-box;
     padding: 0 20px 20px 20px;
     background-color: #fff;
+    margin-top: 20px;
 
     .navbar-ul{
       position: relative;
@@ -87,7 +88,7 @@
 
   .mallIndex-section{
     box-sizing: border-box;
-    margin: 30px 0;
+    margin: 10px 0;
     background-color: #fff;
     padding-top: 10px;
 
