--- a/src/assets/scss/pubComponents/userList.scss
+++ b/src/assets/scss/pubComponents/userList.scss
@@ -67,4 +67,8 @@
       }
     }
   }
+  .userList-li:hover{
+    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.2);
+    transition: box-shadow .3s;
+  }
 }
