--- a/src/assets/scss/community/index.scss
+++ b/src/assets/scss/community/index.scss
@@ -61,7 +61,7 @@
           border-radius: 30px 0 30px 0;
         }
       }
-      dl:first-child{
+      dl{
         margin-bottom: 20px;
       }
 
@@ -83,6 +83,7 @@
       // margin-top: 20px;
       width: 700px;
       // background-color: #F3F3F3;
+      min-height: 700px;
       display: flex;
       flex-direction: column;
       align-items: center;
