--- a/src/assets/scss/community/messageList.scss
+++ b/src/assets/scss/community/messageList.scss
@@ -2,9 +2,7 @@
 @import "../public/mixins.scss";
 
 #postList{
-  min-height: 50vh;
-  
-  .postList-li-1{
+  .postList-li{
     box-sizing: border-box;
     background-color: #fff;
     padding: 20px;
@@ -24,8 +22,8 @@
         display: flex;
 
         .avatar{
-          width: 45px;
-          height: 45px;
+          width: 43px;
+          height: 43px;
           border: 1px solid #808080;
           border-radius: 50%;
           box-sizing: border-box;
@@ -61,44 +59,11 @@
         align-items: center;
       }
     }
-
-    .body{
-      margin: 5px 8px;
-
-      .ptitle{
-        margin-bottom: 5px;
-        color: #1846B3;
-      }
-
-      p{
-        font-size: 16px;
-        line-height: 23px;
-        cursor: pointer;
-        margin-bottom: 12px;
-      }
+    .message{
+      box-sizing: border-box;
+      padding: 5px 20px 10px;
+      color: #1473C3;
     }
-
-    .images{
-      width: 100%;
-      max-width: 400px;
-      display:flex;
-      flex-wrap: wrap;
-      margin-left: 10px;
-
-      .el-image{
-        width: 120px;
-        margin:2px;
-        height:120px;
-        box-sizing: border-box;
-      }
-    }
-
-    .video{
-      width: 100%;
-      max-width: 400px;
-      margin: 0 10px;
-    }
-    // 转发的帖子
     .pforward{
       width: 98%;
       border: 1px solid #D7D7D7;
@@ -163,81 +128,6 @@
           font-size: 14px;
           line-height: 20px;
           cursor: pointer;
-        }
-      }
-    }
-
-    .operate{
-      width: 100%;
-      height: 30px;
-      box-sizing: border-box;
-      display: flex;
-      justify-content: flex-end;
-      margin: 8px 0;
-
-      span{
-        line-height: 30px;
-        color: #CFCFCF;
-      }
-
-      .like,
-      .collection,
-      .forward{
-        box-sizing: border-box;
-        width: 90px;
-        height: 100%;
-        @include flex-center();
-        // border-left: 1px solid #E4E4E4;
-        // border-right: 1px solid #E4E4E4;
-        cursor: pointer;
-
-        img{
-          width: 27px;
-          height: 27px;
-          margin-right: 5px;
-        }
-
-        div{
-          font-size: 14px;
-        }
-      }
-      .like:hover,
-      .collection:hover,
-      .forward:hover{
-        color: red;
-      }
-    }
-    .comments{
-      width: 100%;
-      box-sizing: border-box;
-      // border: 1px solid #B5B5B5;
-
-      .commentList{
-        margin: 8px 0 0 0;
-        font-size: 14px;
-        line-height: 20px;
-        cursor: pointer;
-        .obj{
-          span{
-            color: #DE505E;
-          }
-          .reply{
-            color: #000;
-          }
-        }
-      }
-
-      .commentList:hover{
-        background-color: #FFECEC;
-      }
-
-      .tocomment{
-        display: flex;
-        margin-bottom: 15px;
-        align-items: center;
-
-        .el-button{
-          margin-left: 15px;
         }
       }
     }
