--- a/src/assets/scss/index/_styleMigration.scss
+++ b/src/assets/scss/index/_styleMigration.scss
@@ -14,12 +14,19 @@
 
       .example{
         width: 100%;
-        height: 370px;
         background-color: #fff;
         display: flex;
+        flex-wrap: wrap;
         box-sizing: border-box;
-        padding: 40px;
+        padding: 20px 40px 30px;
         justify-content: space-between;
+
+        .title{
+          width: 100%;
+          font-size: 20px;
+          text-shadow: 1px 1px 3px #323232;
+          margin-bottom: 20px;
+        }
 
         .pic1, .pic2, .pic3{
           width: 200px;
@@ -36,7 +43,7 @@
         .add, .arrow{
           height: 300px;
           line-height: 300px;
-          font-size: 40px;
+          font-size: 80px;
           color: #FF6565;
         }
       }
@@ -46,7 +53,7 @@
         width: 100%;
         margin-top: 20px;
         box-sizing: border-box;
-        padding: 0 40px 40px 40px;
+        padding: 10px 40px 40px 40px;
         background-color: #fff;
 
         .title{
@@ -54,8 +61,7 @@
           height: 60px;
           line-height: 60px;
           font-size: 20px;
-          // border-bottom: 2px solid #D7D7D7;
-          text-shadow: 2px 2px 3px #444444;
+          text-shadow: 1px 1px 3px #323232;
         }
         .select{
           display: flex;
