--- a/src/assets/scss/mine/_index.scss
+++ b/src/assets/scss/mine/_index.scss
@@ -74,28 +74,33 @@
 				align-items: center;
 
 				a{
+					width: 70%;
 					text-decoration: none;
 					color: #000;
+					height: 40px;
+					border-top: 1px solid #DBDBDB;
+					border-bottom: 1px solid #DBDBDB;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					margin-bottom: 10px;
+					border-radius: 40px 0 40px 0;
 
 					li{
-						width: 80px;
-						@include flex-center(column);
-
-						dt{
-							width: 50px;
-							font-size: 18px;
-							@include flex-center();
-						}
-
-						dd{
-							margin-top: 10px;
-						}
+						font-size: 17px;
 					}
+				}
+				a:hover{
+					border-top: 1px solid #ff9797;
+					border-bottom: 1px solid #ff9797;
+					cursor: pointer;
+				}
 
-					li:hover{
-						color: #FF7070;
-						cursor: pointer;
-					}
+				.router-link-active {
+					color: #fff;
+					border-top: 1px solid #ff9797;
+					border-bottom: 1px solid #ff9797;
+					background-color: #ff9797;
 				}
 			}
 		}
