--- a/src/assets/scss/community/index.scss
+++ b/src/assets/scss/community/index.scss
@@ -16,7 +16,7 @@
 
     .navs{
       width: 160px;
-      height: 100%;
+      height: 600px;
       color: #000;
       display: flex;
       flex-direction: column;
@@ -29,51 +29,35 @@
       border: 1px solid #E1E1E1;
       // box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
       border-radius: 2px;
-      
-      dl{
+
+      .el-collapse{
         width: 100%;
-        
-        dt{
-          width: 100%;
-          height: 40px;
-          line-height: 30px;
-        }
-
-        dd{
-          width: 60%;
-          height: 30px;
-          line-height: 30px;
-          font-size: 15px;
-          @include flex-center();
-          cursor: pointer;
-          margin: 0 auto;
-          // border-bottom: 1px solid #DADADA;
-        }
-
-        dd:hover{
-          color: #ff9797;
-          cursor: pointer;
-        }
-
-        .navActive{
-          background-color: #FFD2D2;
-          transition: background-color 1s;
-          border-radius: 30px 0 30px 0;
-        }
-      }
-      dl{
-        margin-bottom: 20px;
       }
 
-      .aboutMe{
-        margin-top: 50px;
+      .aboutMe,
+      .teachList,
+      .cusList,
+      .cosList{
+        margin-top: 10px;
         width: 100%;
         height: 40px;
         border-top: 1px solid #DADADA;
         border-bottom: 1px solid #DADADA;
         @include flex-center();
+
+        dl{
+          display: none;
+        }
       }
-      .aboutMe:hover{
+
+      .aboutMe{
+        margin-top: 50px;
+      }
+
+      .aboutMe:hover,
+      .teachList:hover,
+      .cusList:hover,
+      .cosList:hover{
         color: #ff9797;
         cursor: pointer;
       }
@@ -96,12 +80,10 @@
         height: 50px;
         border-radius: 2px;
         margin-bottom: 20px;
-        // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
         border: 1px solid #E1E1E1;
         background-color: #fff;
         @include flex-center();
-
-
+        
         .publishDesc{
           @include flex-center(column);
 
