--- a/src/assets/scss/header/_header.scss
+++ b/src/assets/scss/header/_header.scss
@@ -141,33 +141,59 @@
           }
         }
       }
+
+      .login:hover,.register:hover{
+        color: #f00;
+      }
     }
 
     .me-1{
+      width: 10vw;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+
       span{
         cursor: pointer;
       }
     }
 
     .me-2{
+      width: 15vw;
       display: flex;
+      justify-content: flex-end;
       align-items: center;
-      .avatar{
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
 
-        img{
-          width: 100%;
-          height: 100%;
+      .avatar-name{
+        display: flex;
+        align-items: center;
+
+        .avatar{
+          width: 40px;
+          height: 40px;
           border-radius: 50%;
+
+          img{
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+          }
+        }
+        .nickName{
+          margin: 0 10px;
         }
       }
-      .nickName{
-        margin-left: 15px;
+      .exit{
+        margin: 0 10px;
+        font-size: 12px;
+        color: #3069C5;
+        cursor: pointer;
+      }
+      .exit:hover{
+        color: #f00;
       }
     }
-    .me-2:hover{
+    .avatar-name:hover{
       color: #ff9797;
       cursor: pointer;
     }
