--- a/src/assets/scss/community/postDetails.scss
+++ b/src/assets/scss/community/postDetails.scss
@@ -23,7 +23,7 @@
 
     .post{
       width: 95%;
-      border: 1px solid #E1E1E1;
+      // border: 1px solid #E1E1E1;
       margin-bottom: 20px;
 
       .postList-li{
