--- a/src/assets/scss/pubComponents/postItem.scss
+++ b/src/assets/scss/pubComponents/postItem.scss
@@ -2,9 +2,12 @@
 @import "../public/mixins.scss";
 
 #postItem{
+  width: 100%;
   @include flex-center();
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 0 30px;
 
   .hotPostsList-item{
     width: 380px;
@@ -98,7 +101,7 @@
 
       .desc{
         max-width: 260px;
-        height: 80px;
+        height: 73px;
         margin: 0 5px 0 10px;
         font-size: 11px;
         white-space:wrap;
@@ -108,6 +111,12 @@
         padding: 2px;
         color: #606060;
         overflow: hidden;
+
+        .ptitle{
+          color: #2858BC;
+          font-size: 13px;
+          margin-bottom: 5px;
+        }
       }
     }
   }
@@ -115,4 +124,9 @@
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.2);
     transition: box-shadow .3s;
   }
+}
+#postItem:after {
+  content: "";
+  height:0;
+  display:block;
 }
