--- a/src/assets/scss/index/_styleMigration.scss
+++ b/src/assets/scss/index/_styleMigration.scss
@@ -72,13 +72,13 @@
           .image{
             width: 200px;
             // height: 300px;
+            min-height: 250px;
             border: 1px solid #ADADAD;
             border-radius: 4px;
             padding: 10px;
 
             img{
               width: 100%;
-              height: 100%;
             }
           }
 
