--- a/src/assets/scss/mine/_index.scss
+++ b/src/assets/scss/mine/_index.scss
@@ -84,7 +84,7 @@
 					justify-content: center;
 					align-items: center;
 					margin-bottom: 10px;
-					border-radius: 40px 0 40px 0;
+					// border-radius: 40px 0 40px 0;
 
 					li{
 						font-size: 17px;
@@ -101,6 +101,7 @@
 					border-top: 1px solid #ff9797;
 					border-bottom: 1px solid #ff9797;
 					background-color: #ff9797;
+					transition: background-color 1s, color 1s;
 				}
 			}
 		}
