--- a/src/assets/scss/community/postList.scss
+++ b/src/assets/scss/community/postList.scss
@@ -27,7 +27,7 @@
           border: 1px solid #DADADA;
           box-sizing: border-box;
           border-radius: 50%;
-          // margin: 5px;
+          cursor: pointer;
 
           img{
             width: 100%;
@@ -44,6 +44,7 @@
 
           .name{
             font-size: 16px;
+            cursor: pointer;
           }
           .time{
             font-size: 11px;
